--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# _mkrproj_
+# {{projectname}}
 
 <!-- Standard badges and licenses: -->
 <!-- [![DOI](https://zenodo.org/badge/DOI/[ZENODO_DOI])](https://doi.org/[ZENODO_DOI]) Uncomment when deposited to Zenodo -->
@@ -83,3 +83,7 @@ to install R package dependencies.
 Please note that this project is released with a [Contributor Code of
 Conduct](https://contributor-covenant.org/version/2/1/CODE_OF_CONDUCT.html). By
 contributing to this project, you agree to abide by its terms.
+
+## Reproducibility
+
+Template SHA: {{template_sha}}
